--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.7.0",
     "body-parser": "^1.19.0",
     "client-sessions": "^0.8.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "md5": "^2.2.1",
     "mongoose": "^5.7.5",
